Fix page overflow

--- a/src/css/components/Page.css
+++ b/src/css/components/Page.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   box-shadow: 0 0 28px 0 rgba(30, 30, 30, 0.3);
   padding-bottom: 100px;
+  overflow: hidden;
 
   @media (--medium) {
     margin-top: 0;
