--- a/src/css/core/variables.css
+++ b/src/css/core/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #f6f6f6;
+  --background: #f6f1f1;
   --header-grey: #4a4a4a;
   --ui-grey: #e6e6e6;
 
